<resources>
    <string name="app_name">P!casso</string>
    <string name="color">Color</string>
    <string name="pencil">Pencil</string>
    <string name="line_width">Line Width</string>
    <string name="erase">Erase</string>
    <string name="clear">Clear</string>
    <string name="set_width">Set Width</string>
    <string name="alpha">Alpha</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="set_color">Set Color</string>
</resources>